# SpaceShooter3D

./: .gitignore  CMakeLists.txt  README.md  highscore.tbl
config/: game.ini  level.ini
include/: 3dobject.h  BackDrop.h  Bullet.h  Clock.h  D3DRenderer.h  DebugCamera.h  DirectionalLight.h  Enemy.h  EntityManager.h  Explosion.h  Hud.h  INIParser.h  LogFile.h  LogManager.h  LogOutputWindow.h  LogTarget.h  Player.h  PointLight.h  PowerUp.h  RandomEnemy.h  SeekerEnemy.h  Shield.h  ShooterEnemy.h  billboard.h  camera.h  defines.h  dikeyboard.h  directinputcontroller.h  dynamicentity.h  entity.h  game.h  highscore.h  igcamera.h  igviewport.h  level.h  logd3dfb.h  mesh.h  messageprocessor.h  particle.h  particleemitter.h  (+7 more)
log/: log.onx
media/: enemy2.x  enemy3.x  shield.x  shieldpowerup.x  speedpowerup.x  target.x  titlescreen.psd
media/.svn/: all-wcprops  entries
media/.svn/text-base/: bullet.png.svn-base  bullet.x.svn-base  bulletpowerup.x.svn-base  enemy1.x.svn-base  enemy2.png.svn-base  plane.x.svn-base  playership.png.svn-base  playership.x.svn-base  shield.png.svn-base  testplane.png.svn-base  titlescreen.x.svn-base
src/: 3dobject.cpp  BackDrop.cpp  Bullet.cpp  Clock.cpp  DebugCamera.cpp  DirectionalLight.cpp  Enemy.cpp  EntityManager.cpp  Explosion.cpp  Hud.cpp  INIParser.cpp  LogFile.cpp  LogManager.cpp  LogOutputWindow.cpp  Player.cpp  PointLight.cpp  PowerUp.cpp  RandomEnemy.cpp  SeekerEnemy.cpp  Shield.cpp  ShooterEnemy.cpp  billboard.cpp  d3drenderer.cpp  dikeyboard.cpp  directinputcontroller.cpp  dynamicentity.cpp  game.cpp  highscore.cpp  hiscores.onx  igcamera.cpp  igviewport.cpp  level.cpp  logd3dfb.cpp  main.cpp  mesh.cpp  messageprocessor.cpp  particle.cpp  particleemitter.cpp  playerinput.cpp  titlescreen.cpp  (+2 more)
src/.svn/: all-wcprops  entries
src/.svn/text-base/: 3dobject.cpp.svn-base  3dobject.h.svn-base  BackDrop.cpp.svn-base  BackDrop.h.svn-base  Bullet.cpp.svn-base  Bullet.h.svn-base  (+83 more)
